aks-workshop/gatekeeper/labels-policy-enforce.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: pods-must-have-labels
spec:
  enforcementAction: deny
  match:
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
    namespaces:
    - gatekeeper-test
  parameters:
    labels:
    - "app"
    - "owner"
